--- a/TestProcess/TestProcess.vcxproj.filters
+++ b/TestProcess/TestProcess.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="..\Core\Test\TestORB\process\IDL\Test_V2.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
+    <ClCompile Include="..\Core\Test\TestORB\process\IDL\Test_V3.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Core\Test\TestORB\include\TestORB.h">
@@ -110,6 +113,12 @@
     <ClInclude Include="..\Core\Test\TestORB\process\IDL\Test_V2.h">
       <Filter>Generated</Filter>
     </ClInclude>
+    <ClInclude Include="..\Core\Test\TestORB\process\IDL\Test_V3.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Core\Test\TestORB\include\I2_factory_impl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\Core\Test\TestORB\idl\Test_I1.idl">
@@ -134,6 +143,9 @@
       <Filter>IDL</Filter>
     </CustomBuild>
     <CustomBuild Include="..\Core\Test\TestORB\idl\Test_V2.idl">
+      <Filter>IDL</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_V3.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
   </ItemGroup>
