--- a/TestProcess/TestProcess.vcxproj.filters
+++ b/TestProcess/TestProcess.vcxproj.filters
@@ -148,5 +148,8 @@
     <CustomBuild Include="..\Core\Test\TestORB\idl\Test_V3.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
+    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_U.idl">
+      <Filter>IDL</Filter>
+    </CustomBuild>
   </ItemGroup>
 </Project>
