--- a/TestModule/TestModule.vcxproj.filters
+++ b/TestModule/TestModule.vcxproj.filters
@@ -21,239 +21,239 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_I1.idl">
+    <CustomBuild Include="..\TestORB\idl\Test_I1.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_I2.idl">
+    <CustomBuild Include="..\TestORB\idl\Test_I2.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_I3.idl">
+    <CustomBuild Include="..\TestORB\idl\Test_I3.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_I1_factory.idl">
+    <CustomBuild Include="..\TestORB\idl\Test_I1_factory.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_I3_factory.idl">
+    <CustomBuild Include="..\TestORB\idl\Test_I3_factory.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_V1.idl">
+    <CustomBuild Include="..\TestORB\idl\Test_V1.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_A1.idl">
+    <CustomBuild Include="..\TestORB\idl\Test_A1.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_V2.idl">
+    <CustomBuild Include="..\TestORB\idl\Test_V2.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_V3.idl">
+    <CustomBuild Include="..\TestORB\idl\Test_V3.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_U.idl">
+    <CustomBuild Include="..\TestORB\idl\Test_U.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Core\Test\TestORB\module\I1_factory_dynamic.cpp">
+    <ClCompile Include="..\TestORB\module\I1_factory_dynamic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\I1_factory_portable.cpp">
+    <ClCompile Include="..\TestORB\module\I1_factory_portable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\I1_factory_tied.cpp">
+    <ClCompile Include="..\TestORB\module\I1_factory_tied.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\I1_static.cpp">
+    <ClCompile Include="..\TestORB\module\I1_static.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\I3_factory_dynamic.cpp">
+    <ClCompile Include="..\TestORB\module\I3_factory_dynamic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\I3_factory_portable.cpp">
+    <ClCompile Include="..\TestORB\module\I3_factory_portable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\I3_factory_tied.cpp">
+    <ClCompile Include="..\TestORB\module\I3_factory_tied.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\I3_static.cpp">
+    <ClCompile Include="..\TestORB\module\I3_static.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\ImplI1.cpp">
+    <ClCompile Include="..\TestORB\module\ImplI1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_I1.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_I1.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_I1_factory.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_I1_factory.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_I1_factory_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_I1_factory_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_I1_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_I1_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_I2.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_I2.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_I2_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_I2_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_I3.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_I3.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_I3_factory.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_I3_factory.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_I3_factory_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_I3_factory_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_I3_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_I3_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_V1.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_V1.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_V1_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_V1_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_A1.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_A1.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_A1_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_A1_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_V2.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_V2.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_V2_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_V2_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\ImplV1.cpp">
+    <ClCompile Include="..\TestORB\module\ImplV1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\ImplV2.cpp">
+    <ClCompile Include="..\TestORB\module\ImplV2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_V3.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_V3.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_V3_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_V3_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\ImplV3.cpp">
+    <ClCompile Include="..\TestORB\module\ImplV3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_U.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_U.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_U_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\Test_U_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Core\Test\TestORB\module\DynamicI1.h">
+    <ClInclude Include="..\TestORB\module\DynamicI1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\DynamicI3.h">
+    <ClInclude Include="..\TestORB\module\DynamicI3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\ImplI1.h">
+    <ClInclude Include="..\TestORB\module\ImplI1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\PortableI1.h">
+    <ClInclude Include="..\TestORB\module\PortableI1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\PortableI3.h">
+    <ClInclude Include="..\TestORB\module\PortableI3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\include\I1_factory_dynamic.h">
+    <ClInclude Include="..\TestORB\include\I1_factory_dynamic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\include\I1_factory_portable.h">
+    <ClInclude Include="..\TestORB\include\I1_factory_portable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\include\I1_factory_tied.h">
+    <ClInclude Include="..\TestORB\include\I1_factory_tied.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\include\I1_static.h">
+    <ClInclude Include="..\TestORB\include\I1_static.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\include\I3_factory_dynamic.h">
+    <ClInclude Include="..\TestORB\include\I3_factory_dynamic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\include\I3_factory_portable.h">
+    <ClInclude Include="..\TestORB\include\I3_factory_portable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\include\I3_factory_tied.h">
+    <ClInclude Include="..\TestORB\include\I3_factory_tied.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\include\I3_static.h">
+    <ClInclude Include="..\TestORB\include\I3_static.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_I1.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_I1.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_I1_factory.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_I1_factory.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_I1_factory_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_I1_factory_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_I1_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_I1_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_I2.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_I2.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_I2_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_I2_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_I3.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_I3.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_I3_factory.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_I3_factory.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_I3_factory_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_I3_factory_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_I3_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_I3_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_V1.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_V1.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_V1_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_V1_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_A1.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_A1.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_A1_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_A1_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\ImplI3.h">
+    <ClInclude Include="..\TestORB\module\ImplI3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_V2.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_V2.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_V2_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_V2_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_V3.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_V3.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_V3_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_V3_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\include\I2_factory_impl.h">
+    <ClInclude Include="..\TestORB\include\I2_factory_impl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_U.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_U.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_U_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\Test_U_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
   </ItemGroup>
