--- a/TestModule/TestModule.vcxproj.filters
+++ b/TestModule/TestModule.vcxproj.filters
@@ -48,7 +48,10 @@
     <CustomBuild Include="..\TestORB\idl\Test_V3.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\TestORB\idl\Test_U.idl">
+    <CustomBuild Include="..\TestORB\idl\Union.idl">
+      <Filter>IDL</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\TestORB\idl\NestedStruct.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
   </ItemGroup>
@@ -143,10 +146,16 @@
     <ClCompile Include="..\TestORB\module\ImplV3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\TestORB\module\IDL\Test_U.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\NestedStruct.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\TestORB\module\IDL\Test_U_p.cpp">
+    <ClCompile Include="..\TestORB\module\IDL\NestedStruct_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\module\IDL\Union.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\module\IDL\Union_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
   </ItemGroup>
@@ -250,10 +259,16 @@
     <ClInclude Include="..\TestORB\include\I2_factory_impl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\TestORB\module\IDL\Test_U.h">
+    <ClInclude Include="..\TestORB\module\IDL\NestedStruct.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="..\TestORB\module\IDL\Test_U_s.h">
+    <ClInclude Include="..\TestORB\module\IDL\NestedStruct_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\module\IDL\Union.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\module\IDL\Union_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
   </ItemGroup>
