--- a/TestProcess/TestProcess.vcxproj.filters
+++ b/TestProcess/TestProcess.vcxproj.filters
@@ -51,7 +51,7 @@
     <ClCompile Include="..\TestORB\process\IDL\Test_V3.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="..\TestORB\process\IDL\Test_U.cpp">
+    <ClCompile Include="..\TestORB\process\IDL\Union.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
   </ItemGroup>
@@ -113,7 +113,7 @@
     <ClInclude Include="..\TestORB\include\I2_factory_impl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\TestORB\process\IDL\Test_U.h">
+    <ClInclude Include="..\TestORB\process\IDL\Union.h">
       <Filter>Generated</Filter>
     </ClInclude>
   </ItemGroup>
@@ -145,7 +145,7 @@
     <CustomBuild Include="..\TestORB\idl\Test_V3.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\TestORB\idl\Test_U.idl">
+    <CustomBuild Include="..\TestORB\idl\Union.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
   </ItemGroup>
